--- a/package.json
+++ b/package.json
@@ -7,18 +7,27 @@
   "license": "MIT",
   "scripts": {
     "build:server": "webpack --config webpack.config.server.js",
+    "build:client": "webpack --config webpack.config.client.js",
     "start": "node ./dist/server.js"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "ejs": "^3.1.6",
+    "express": "^4.17.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.10",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
+    "webpack-manifest-plugin": "^4.1.1",
     "webpack-node-externals": "^3.0.0"
   }
 }
