--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build:server": "webpack --config webpack.config.server.js",
     "build:client": "webpack --config webpack.config.client.js",
-    "start": "node ./dist/server.js"
+    "start": "node ./dev.js"
   },
   "dependencies": {
     "ejs": "^3.1.6",
@@ -23,6 +23,7 @@
     "@types/react-dom": "^17.0.11",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.1",
+    "cross-spawn": "^7.0.3",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.67.0",
